--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ At SweetShop.com, we offer a wide range of traditional and contemporary sweets, 
 <h1 id="contact-title"> Contact Us </h1>
 <a href="https://www.youtube.com/@Uneek_Study"> <img src="Images/social/yt.png" alt="youtube" id="social-logo"/> </a>
 <a href="https://www.facebook.com/people/Uneek-Study/61551612749800/?mibextid=ZbWKwL"> <img src="Images/social/fb.png" alt="facebook" class="social-logo"/> </a>
-<a href="https://www.instagram.com/uneek_study/"> <img src="Images/social/insta.png" alt="instagram" class="social-logo"/> </a>
+<a href="https://www.instagram.com/uneek_study/"> <img src="Images/social/Insta.png" alt="instagram" class="social-logo"/> </a>
 <a href="https://x.com/Uneek_Khan?s=08"> <img src="Images/social/x.png" alt="x" class="social-logo"/> </a>
 <a href="https://www.linkedin.com/in/abdulkarimkhan7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> <img src="Images/social/in.png" alt="linkedin" class="social-logo"/> </a>
 </div>
